<resources>
    <string name="app_name">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="LANG_NAME">이름</string>
    <string name="LANG_EMAIL">이메일</string>
    <string name="LANG_ID">아이디</string>
    <string name="LANG_ID_FIND">아이디 찾기</string>
    <string name="LANG_REGISTER">회원가입</string>
    <string name="LANG_PASSWORD_FIND_BTN">찾기</string>
    <string name="LANG_PASSWORD_FIND">비밀번호 찾기</string>
    <string name="LANG_ENTER_ID">아이디를 입력해주세요</string>
    <string name="LANG_ENTER_NAME">이름을 입력해주세요</string>
    <string name="LANG_EMAIL_EXAMPLE">abc@gmail.com</string>
</resources>