<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/FIndID_FindButton"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginBottom="192dp"
        android:background="@drawable/register_complete_round"
        android:backgroundTint="@color/main_skyblue"
        android:text="@string/LANG_PASSWORD_FIND_BTN"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_find_email_input_layout"
        app:layout_constraintVertical_bias="0.656" />

    <TextView
        android:id="@+id/FindID_PasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/LANG_PASSWORD_FIND"
        android:textColor="@color/main_skyblue"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FIndID_FindButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/FindID_RegisterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/LANG_REGISTER"
        android:textColor="@color/main_skyblue"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FindID_PasswordText"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/login_findID_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LANG_ID_FIND"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FindID_cancel"
        app:layout_constraintVertical_bias="0.182" />

    <ImageView
        android:id="@+id/FindID_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/FindID_NameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LANG_NAME"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_findID_title"
        app:layout_constraintVertical_bias="0.073" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/id_find_name_input_layout"
        android:layout_width="360dp"
        android:layout_height="51dp"
        android:layout_marginBottom="392dp"
        android:background="@drawable/nickname_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FindID_NameTitle"
        app:layout_constraintVertical_bias="0.307">

        <EditText
            android:id="@+id/id_find_name_input"
            android:layout_width="320dp"
            android:layout_height="31dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/LANG_ENTER_NAME"
            android:inputType="textPersonName"
            android:maxLength="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.47" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/FindID_EmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="364dp"
        android:text="@string/LANG_EMAIL"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_find_name_input_layout"
        app:layout_constraintVertical_bias="0.583" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/id_find_email_input_layout"
        android:layout_width="360dp"
        android:layout_height="51dp"
        android:layout_marginBottom="292dp"
        android:background="@drawable/nickname_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FindID_EmailTitle"
        app:layout_constraintVertical_bias="0.303">

        <EditText
            android:id="@+id/id_email_name_input"
            android:layout_width="320dp"
            android:layout_height="31dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/LANG_EMAIL_EXAMPLE"
            android:inputType="textPersonName"
            android:maxLength="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.47" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>